WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
287235
Abort FileSystem writables in case of network process crash or storage clearing
https://bugs.webkit.org/show_bug.cgi?id=287235
Summary
Abort FileSystem writables in case of network process crash or storage clearing
youenn fablet
Reported
2025-02-07 05:08:20 PST
Abort FileSystem writables in case of network process crash or storage clearing
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-02-07 05:08:50 PST
<
rdar://problem/144380830
>
youenn fablet
Comment 2
2025-02-07 05:17:22 PST
Pull request:
https://github.com/WebKit/WebKit/pull/40207
EWS
Comment 3
2025-02-23 11:14:12 PST
Committed
290915@main
(daadfcfb7025): <
https://commits.webkit.org/290915@main
> Reviewed commits have been landed. Closing PR #40207 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug